--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,8 @@
 	<p>Hello</p>
 	<br/>
 	<br/>
-	<p>User ID: <label th:text="${user.userid}"></label></p>
-	<p>Username: <label th:text="${user.username}"></label></p>
+	<p>User ID: <label th:text="${user.userId}"></label></p>
+	<p>Username: <label th:text="${user.userName}"></label></p>
 	<p>Password: <label th:text="${user.password}"></label></p>
 	<p>Email: <label th:text="${user.email}"></label></p>
 </body>
